Сделал планшетную версию каталога

--- a/source/pug/blocks/catalog/2_companions-cards.pug
+++ b/source/pug/blocks/catalog/2_companions-cards.pug
@@ -1,5 +1,5 @@
 section.companions-content__companions.page-companions
-  h2.visually-hidden Профили путешественников
+  h2.visually-hidden Профили попутчиков
 
   //- mixin companions-card-page(imageLink, personName, likeCount, tags, countries, level, fly=false, bus=false, bike=false, walk=false)
 
