--- a/source/pug/blocks/catalog/4_companions-pagination.pug
+++ b/source/pug/blocks/catalog/4_companions-pagination.pug
@@ -5,7 +5,7 @@ section.companions-content__pagination.companions-pagination
 
   .companions-pagination__wrapper
     .companions-pagination__numbers
-      a.companions-pagination__numbers-link(href="#") 1
+      a.companions-pagination__numbers-link.companions-pagination__numbers-link--current(href="#") 1
       a.companions-pagination__numbers-link(href="#") 2
       a.companions-pagination__numbers-link(href="#") 3
       a.companions-pagination__numbers-link(href="#") 4
