--- a/source/pug/blocks/page-title.pug
+++ b/source/pug/blocks/page-title.pug
@@ -1,5 +1,5 @@
 section.page-title
-  .wrapper
+  .wrapper.page-title__wrapper
     h3.page-title__caption #{pageCaption}
     a.page-title__back-to-home(href='index.html') На главную
 
