--- a/source/sass/blocks/catalog/companions-filter.scss
+++ b/source/sass/blocks/catalog/companions-filter.scss
@@ -12,20 +12,25 @@
   color: $color-dark-blue-slate;
 }
 
-.companions-filter__form {
-}
-
 .companions-filter__tabs {
   margin: 0;
 }
 
 .companions-filter__tab-title {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 10px;
   padding-bottom: 10px;
   border-top: 1px solid #f3c72b;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 18px;
+  color: $color-dark-blue-slate;
+  text-transform: uppercase;
+  text-align: left;
+  transition: 0.2s;
 
   span {
     display: none;
@@ -60,18 +65,15 @@
 }
 
 .companions-filter__tab-title-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  margin: 0;
-  padding: 0;
   border: 0;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 18px;
-  color: $color-dark-blue-slate;
   background-color: transparent;
-  text-transform: uppercase;
-  text-align: left;
-  transition: 0.2s;
+  z-index: 2;
 }
 
 
@@ -313,4 +315,176 @@
     color: rgba($color-dark-blue, 0.3);
     background-color: #f3c72b;
   }
+}
+
+
+@media only screen and (min-width: $tablet-width) {
+
+  .companions-filter {
+    padding: 37px 36px 38px 36px;
+  }
+
+
+  .companions-filter__caption {
+    margin-bottom: 44px;
+    font-size: 30px;
+
+    br {
+      display: none;
+    }
+  }
+
+  .companions-filter__form {
+
+  }
+
+  .companions-filter__tabs {
+    padding-top: 33px;
+    padding-bottom: 37px;
+    border-top: 1px solid #f3c72b;
+    border-bottom: 1px solid #f3c72b;
+  }
+
+  .companions-filter__tab-group {
+    display: flex;
+
+    &:not(:last-child) {
+      margin-bottom: 26px;
+    }
+
+    &--level {
+      margin-top: -15px;
+    }
+  }
+
+  .companions-filter__tab-title {
+    justify-content: flex-start;
+    width: 125px;
+    max-width: 125px;
+    padding: 0;
+    border-top: 0;
+    font-size: 20px;
+    font-weight: 500;
+
+    span {
+      display: inline;
+    }
+
+    &::after {
+      display: none;
+    }
+  }
+
+  .companions-filter__tab-title-btn {
+    display: none;
+  }
+
+  .companions-filter__tab-item {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    width: calc(100% - 125px);
+    margin-bottom: 0;
+
+    &--transport {
+
+      .companions-filter__tab-input-group {
+        width: auto;
+      }
+    }
+
+    &--level {
+      align-items: center;
+    }
+  }
+
+  .companions-filter__tab-input-group {
+    width: 33%;
+    margin-top: 0;
+
+    // &:nth-last-child(1) {
+    //   padding-left: 18px;
+    // }
+
+    // &:nth-last-child(2) {
+    //   padding-left: 7px;
+    // }
+  }
+
+  .companions-filter__tab-label {
+    align-items: center;
+    font-size: 20px;
+
+    &::before {
+      @include size(24px);
+      margin-right: 12px;
+    }
+
+    &::after {
+      left: 6px;
+      @include size(12px);
+    }
+  }
+
+  .companions-filter__tab-label-transport {
+    @include size(43px);
+
+    &[for="plane"]::after {
+      @include size(19px, 21px);
+    }
+
+    &[for="bus"]::after {
+      @include size(17px, 21px);
+    }
+
+    &[for="bike"]::after {
+      @include size(24px, 21px);
+    }
+
+    &[for="run"]::after {
+      @include size(20px, 21px);
+    }
+  }
+
+  .companions-filter__tab-level-group {
+    width: 30%;
+    margin-left: 62px;
+    flex-shrink: 0;
+  }
+
+  .companions-filter__tab-input-level {
+    font-size: 20px;
+    padding: 11px 0;
+  }
+
+  .companions-filter__tab-level-slider {
+    width: 70%;
+    height: 3px;
+    margin-top: 0;
+    order: -1;
+
+    &::after {
+      height: 3px;
+    }
+
+    &::before {
+      left: 25%;
+    }
+  }
+
+  .companions-filter__tab-level-slider-btn {
+    @include size(13px);
+
+    &--left {
+      left: 25%;
+    }
+  }
+
+  .companions-filter__tabs-submit-btn {
+    margin-top: 36px;
+    padding: 13px 0;
+    font-size: 20px;
+  }
+
+
 }
