Сделал декстопную версию каталога

--- a/source/pug/blocks/catalog/1_country-filter.pug
+++ b/source/pug/blocks/catalog/1_country-filter.pug
@@ -1,6 +1,7 @@
 section.companions-country-filter
   .wrapper.companions-country-filter__wrapper
     h2.companions-country-filter__caption Фильтрация по странам
+      span :
 
     section.companions-country-filter__buttons
       h5.visually-hidden Кнопки управления
