--- a/source/pug/blocks/catalog/2_companions-cards.pug
+++ b/source/pug/blocks/catalog/2_companions-cards.pug
@@ -91,3 +91,20 @@ section.companions-content__companions.page-companions
     liked=false,
     online=true
   )
+
+  section.companions-content__pagination.companions-pagination
+    h5.visually-hidden Пагинация
+
+    a.companions-pagination__more-btn(href="#") Показать еще
+
+    .companions-pagination__wrapper
+      .companions-pagination__numbers
+        a.companions-pagination__numbers-link.companions-pagination__numbers-link--current(href="#") 1
+        a.companions-pagination__numbers-link(href="#") 2
+        a.companions-pagination__numbers-link(href="#") 3
+        a.companions-pagination__numbers-link(href="#") 4
+
+      .companions-pagination__arrows
+        a.companions-pagination__arrows-link.companions-pagination__arrows-link--prev(href="#") Предыдущая страница
+        a.companions-pagination__arrows-link.companions-pagination__arrows-link--next(href="#") Следующая страница
+
