Вынес файлы SCSS для главной страницы в отдельную папку

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,20 +19,20 @@
 @import "blocks/header.scss";
 @import "blocks/page-title.scss";
 @import "blocks/nav.scss";
-@import "blocks/intro.scss";
-@import "blocks/service.scss";
-@import "blocks/destinations.scss";
-@import "blocks/companions.scss";
-@import "blocks/tariffs.scss";
-@import "blocks/registration.scss";
-@import "blocks/route.scss";
-@import "blocks/map.scss";
 @import "blocks/footer.scss";
 @import "blocks/popup.scss";
 
+// Index page
+@import "blocks/index/intro.scss";
+@import "blocks/index/service.scss";
+@import "blocks/index/destinations.scss";
+@import "blocks/index/companions.scss";
+@import "blocks/index/tariffs.scss";
+@import "blocks/index/registration.scss";
+@import "blocks/index/route.scss";
+@import "blocks/index/map.scss";
 
-// Catalog page files
-
+// Catalog page
 @import "blocks/catalog/catalog-page.scss";
 @import "blocks/catalog/companions-country-filter.scss";
 @import "blocks/catalog/companions-content.scss";
@@ -40,5 +40,7 @@
 @import "blocks/catalog/page-companions.scss";
 @import "blocks/catalog/companions-pagination.scss";
 
+
+// Form page
 
 
