--- a/source/sass/blocks/catalog/companions-content.scss
+++ b/source/sass/blocks/catalog/companions-content.scss
@@ -1,5 +1,13 @@
 .companions-content {
-  margin-top: 48px;
+  margin-top: 24px;
+}
+
+
+@media only screen and (min-width: $tablet-width) {
+  .companions-content {
+    margin-top: 48px;
+  }
+
 }
 
 @media only screen and (min-width: $desktop-width) {
