Мобильная и планшетная версии каталога

--- a/source/pug/catalog.pug
+++ b/source/pug/catalog.pug
@@ -11,7 +11,7 @@ block content
   //- Шапка сайта
   include blocks/header
 
-  main.site-content.catalog-page
+  main.site-content
 
       //- Заголовок страницы
       include blocks/page-title
