--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 
 
 // Base files
+@import "base/site-content.scss";
 @import "base/base.scss";
 @import "base/fonts.scss";
 @import "base/wrapper.scss";
@@ -33,7 +34,6 @@
 @import "blocks/index/map.scss";
 
 // Catalog page
-@import "blocks/catalog/catalog-page.scss";
 @import "blocks/catalog/companions-country-filter.scss";
 @import "blocks/catalog/companions-content.scss";
 @import "blocks/catalog/companions-filter.scss";
@@ -42,5 +42,12 @@
 
 
 // Form page
-
+// @import "blocks/form/companion-form.scss";
+@import "blocks/form/companion-profile.scss";
+@import "blocks/form/companion-plans.scss";
+@import "blocks/form/companion-add-plan.scss";
+@import "blocks/form/step-header.scss";
+@import "blocks/form/step-dates.scss";
+@import "blocks/form/step-route.scss";
+@import "blocks/form/step-entertaiment.scss";
 
